Fix spacing a bit.

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -4626,7 +4626,7 @@ button.close {
   font-weight: bold;
   color: white;
   margin-top: 0;
-  margin-bottom: 30px; }
+  margin-bottom: 25px; }
 
 #welcome .jumbotron__body {
   max-width: 80%;
