--- a/resources/assets/sass/pages/_welcome.scss
+++ b/resources/assets/sass/pages/_welcome.scss
@@ -9,7 +9,7 @@
     font-weight: bold;
     color: white;
     margin-top: 0;
-    margin-bottom: 30px;
+    margin-bottom: 25px;
 }
 
 #welcome .jumbotron__body {
